--- a/Autenticacion/templates/modulos.html
+++ b/Autenticacion/templates/modulos.html
@@ -28,11 +28,17 @@
                 {% block search %}
 
                 {% endblock %}
-                    
+                {% block btnTitle %}
+
+                {% endblock %}
             </div>
+
+            
+            <div>
                 {% block filtros %}
                 
                 {% endblock %}
+            </div>
             <div>
                 {% block metricas %}
 
