--- a/Autenticacion/Modulos/Coordinador/List_Reportes/templates/listado_reportes_agente.html
+++ b/Autenticacion/Modulos/Coordinador/List_Reportes/templates/listado_reportes_agente.html
@@ -11,7 +11,7 @@ Módulo Reportes
 {% block search %}
 <form action="{{ action_save }}" method="GET" class="row g-3 align-items-center">
     <div class="col-md-6">
-        <label for="estado" class="form-label fw-bold">Filtro por estado</label>
+        <label for="estado" class="form-label fw-bold">Filtro por lugar</label>
         <select name="query" class="form-select">
             <option value="" disabled selected>-- Seleccione --</option>
             {% for ubicacion in ubicaciones %}
