--- a/Autenticacion/Modulos/Coordinador/List_Reportes/templates/listado_reportes_agente.html
+++ b/Autenticacion/Modulos/Coordinador/List_Reportes/templates/listado_reportes_agente.html
@@ -9,22 +9,7 @@ Módulo Reportes
 
 
 {% block search %}
-<form action="{{ action_save }}" method="GET" class="row g-3 align-items-center">
-    <div class="col-md-6">
-        <label for="estado" class="form-label fw-bold">Filtro por lugar</label>
-        <select name="query" class="form-select">
-            <option value="" disabled selected>-- Seleccione --</option>
-            {% for ubicacion in ubicaciones %}
-            <option value="{{ ubicacion.id }}" {% if query == ubicacion.id|stringformat:"s" %}selected{% endif %}>
-                {{ ubicacion.lugar }}
-            </option>
-            {% endfor %}
-        </select>
-    </div>
-    <div class="col-md-2">
-        <button type="submit" class="btn btn-primary" id="idSearchSp">Buscar</button>
-    </div>
-</form>
+
 {% endblock %}
 
 {% block filtros %}
@@ -48,10 +33,20 @@ Módulo Reportes
             <option value="C" {% if estado == "C" %}selected{% endif %}>Cerrado</option>
         </select>
     </div>
-    <div class="col-md-2 text-end">
-        <button type="submit" class="btn btn-primary">Filtrar</button>
+    <div class="col-md-6 d-flex flex-column">
+        <label for="estado" class="form-label fw-bold">Filtro por lugar</label>
+        <select name="query" class="form-select">
+            <option value="" disabled selected>-- Seleccione --</option>
+            {% for ubicacion in ubicaciones %}
+                <option value="{{ ubicacion.id }}" {% if query == ubicacion.id|stringformat:"s" %}selected{% endif %}>
+                    {{ ubicacion.lugar }}
+                </option>
+            {% endfor %}
+        </select>
     </div>
-    <div class="col-md-2 text-end">
+    <div class="col-12 text-center mt-3">
+        <!-- Botones centrados en una fila separada -->
+        <button type="submit" class="btn btn-primary me-2">Filtrar</button>
         <a href="{% url 'reportesCoord:listado_reportes_agente' %}" class="btn btn-secondary">Limpiar</a>
     </div>
 </form>
