--- a/Autenticacion/templates/modulos.html
+++ b/Autenticacion/templates/modulos.html
@@ -24,38 +24,37 @@
 
 
         <div class="container">
-           
-                <!-- Botón y título en la primera fila -->
-            <div class="row">
-                <div class="col-12">
+
+
+            <div class="row justify-content-between align-items-center mb-3">
+                <!-- Search bar -->
+                <div class="col-lg-8 search-btn">
+                    {% block search %}
+                    {% endblock %}
+                </div>
+                <!-- Button -->
+                <div class="col-lg-4 text-end">
                     {% block btnTitle %}
                     {% endblock %}
                 </div>
             </div>
 
-            <!-- Barra de búsqueda en la segunda fila -->
-            <div class="row justify-content-center mb-3">
-                <div class="col-lg-10">
-                    {% block search %}
-                    {% endblock %}
-                </div>
-            </div>
 
-            <!-- Filtros en la tercera fila -->
-            <div class="row justify-content-center mb-3">
-                <div class="col-lg-10">
-                    {% block filtros %}
-                    {% endblock %}
+                <!-- Filtros en la tercera fila -->
+                <div class="row justify-content-center mb-3">
+                    <div class="col-lg-10">
+                        {% block filtros %}
+                        {% endblock %}
+                    </div>
                 </div>
-            </div>
 
-            <!-- Métricas en la cuarta fila -->
-            <div class="row justify-content-center">
-                <div class=" col-lg-12">
-                    {% block metricas %}
-                    {% endblock %}
+                <!-- Métricas en la cuarta fila -->
+                <div class="row justify-content-center">
+                    <div class="col-lg-12">
+                        {% block metricas %}
+                        {% endblock %}
+                    </div>
                 </div>
-            </div>
             <div class="table-container">
                 <h5 class="text-center bg-dark text-white p-3">{{ title_table }}</h5>
                 <div class="table-responsive">
